# pulumi-phase

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mise.toml
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/upload-prerequisites/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  license.yml  prerequisites.yml  publish.yml  resync-build.yml  test.yml
docs/: _index.md  installation-configuration.md
examples/: examples_test.go  go.mod
examples/basic-go/: Pulumi.yaml  go.mod  main.go
examples/basic-py/: Pulumi.yaml  __main__.py  requirements.txt
examples/basic-ts/: Pulumi.yaml  index.ts  package.json
provider/: go.mod  go.sum  resources.go
provider/cmd/pulumi-resource-phase/: Pulumi.yaml  bridge-metadata.json  main.go  schema.json
provider/cmd/pulumi-tfgen-phase/: main.go
provider/shim/: go.mod  go.sum  shim.go
sdk/: go.mod
sdk/go/: Pulumi.yaml
sdk/go/phase/: doc.go  getSecrets.go  init.go  provider.go  pulumi-plugin.json  pulumiTypes.go  secret.go
sdk/go/phase/config/: config.go
sdk/nodejs/: Pulumi.yaml  README.md  getSecrets.ts  index.ts  package.json  provider.ts  secret.ts  tsconfig.json  utilities.ts
sdk/nodejs/config/: vars.ts
sdk/nodejs/types/: input.ts  output.ts
sdk/python/: Pulumi.yaml  pyproject.toml
sdk/python/pulumi_phase/: README.md  __init__.py  _inputs.py  _utilities.py  get_secrets.py  outputs.py  provider.py  secret.py
sdk/python/pulumi_phase/config/: __init__.pyi  vars.py
(+1 files in other folders)
