[project]
  name = "pulumi_phase"
  description = "A Pulumi provider for managing secrets with Phase.dev."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["phase", "secrets", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.1.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://phase.dev"
    Repository = "https://github.com/jgautheron/pulumi-phase"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_phase = ["py.typed", "pulumi-plugin.json"]
